change(gui): checks if the available modes is not empty